<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestaurantToGo</string>

    <!-- activity names -->
    <string name="activity_registration">Endless-To-Go Registration</string>

    <!-- text labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- button labels -->
    <string name="button_register">Register</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- info messages -->
    <string name="info_registered">Registered. ObjectId: %s</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>

</resources>
